✨ Fixed the spacing on one of the chapters

--- a/public/assets/styles/acts21_25.css
+++ b/public/assets/styles/acts21_25.css
@@ -149,7 +149,7 @@
 }
 
 .scroll {
-  margin-top: 800%;
+  margin-top: 350%;
 }
 
 #quiz {
